SEBSERV-886 added more tests and minor fixes